- Register for reflection - resolve parameterized type recursively